--- a/test-output/index.html
+++ b/test-output/index.html
@@ -5,9 +5,8 @@
   <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports1.css" rel="stylesheet" id="ultra" />
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" id="retro" disabled="false"/>
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
+    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type='text/javascript'>
@@ -24,7 +23,6 @@
   <body>
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
-      <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
       <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
@@ -167,7 +165,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;uname&quot; value=&quot;abc@xyz.com&quot;/&gt;
@@ -215,22 +213,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test1')
+data.setCell(0, 1, 'test3')
 data.setCell(0, 2, 'testcases.SimplilearnLogin')
-data.setCell(0, 3, 9024);
+data.setCell(0, 3, 7531);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test3')
+data.setCell(1, 1, 'test1')
 data.setCell(1, 2, 'testcases.SimplilearnLogin')
-data.setCell(1, 3, 7894);
+data.setCell(1, 3, 6452);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test2')
 data.setCell(2, 2, 'testcases.SimplilearnLogin')
-data.setCell(2, 3, 6009);
+data.setCell(2, 3, 5707);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -262,49 +260,48 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
-                <span class="method-name">Setup</span>
-                <span class="method-start">464 ms</span>
+                <span class="method-name">Setup(public void testcases.SimplilearnLogin.test1())</span>
+                <span class="method-start">687 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">3480 ms</span>
+                <span class="method-start">3765 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Teardown</span>
-                <span class="method-start">12509 ms</span>
+                <span class="method-start">10221 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">Setup</span>
-                <span class="method-start">12630 ms</span>
+                <span class="method-name">Setup(public void testcases.SimplilearnLogin.test2(java.lang.String,java.lang.String))</span>
+                <span class="method-start">10341 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test2(abc@xyz.com, Abc@1234)</span>
-                <span class="method-start">15140 ms</span>
+                <span class="method-start">12744 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Teardown</span>
-                <span class="method-start">21151 ms</span>
+                <span class="method-start">18452 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">Setup</span>
-                <span class="method-start">21264 ms</span>
+                <span class="method-name">Setup(public void testcases.SimplilearnLogin.test3())</span>
+                <span class="method-start">18570 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test3</span>
-                <span class="method-start">23512 ms</span>
+                <span class="method-start">20924 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Teardown</span>
-                <span class="method-start">31407 ms</span>
+                <span class="method-start">28457 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">DataClean</span>
-                <span class="method-start">31524 ms</span>
+                <span class="method-start">30836 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
     </div> <!-- wrapper -->
   </body>
-<script type="text/javascript" src="testng-reports2.js"></script>
 </html>
