--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/09/11 10:53:11</td>   <td>-17784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test1()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">test1</td> 
-  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/09/11 10:53:23</td>   <td>-6124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLogin@c88a337]">test2</td> 
-  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:39</td>   <td>10143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/09/11 10:53:31</td>   <td>2248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test3()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">test3</td> 
-  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:39</td>   <td>10261</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&lt;&lt;DataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:08</td>   <td>-21261</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&gt;&gt;DataSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:39</td>   <td>10143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>22/09/11 10:53:39</td>   <td>10143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@c88a337]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&gt;&gt;DataSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:09</td>   <td>682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="bfa8f6">  <td>22/09/18 09:50:12</td>   <td>3760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test1()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">test1</td> 
+  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:19</td>   <td>10216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:19</td>   <td>10336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="bfa8f6">  <td>22/09/18 09:50:21</td>   <td>12739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test2(java.lang.String, java.lang.String)[pri:0, instance:testcases.SimplilearnLogin@7d898981]">test2</td> 
+  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:27</td>   <td>18447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:27</td>   <td>18565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="bfa8f6">  <td>22/09/18 09:50:29</td>   <td>20918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.test3()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">test3</td> 
+  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:37</td>   <td>28452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
+<tr bgcolor="c76667">  <td>22/09/18 09:50:39</td>   <td>30831</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLogin@7d898981]">&lt;&lt;DataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507819576</td>   <td></td> </tr>
 </table>
